2013-06-19  Ramon Casero  <rcasero@gmail.com>

	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.3.2)

	- Fix bug: the original algorithm returns a distance
	SMALL=2.22045e-16 between each node and itself, because of the way
	the algorithm is initialized. This distance should be zero.

	* Add matlab/PointsToolbox/pca_normalize.m: (0.1.0)
	* Add matlab/test/test_pca_normalize.m: (0.1.0)

	- Normalize a set of points so that its centroid is zero,the
	Principal Components correspond to the Cartesian axes, and the
	variance (eigenvalue) along each Principal Component is one.

	* matlab/PointsToolbox/pts_cn.m: (0.1.1)

	- Update argument checking syntax.

	- Add "See also" to new function pca_normalize.

2013-06-17  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/test/test_surface_param.m: (0.2.0)
	* Add matlab/PointsToolbox/surface_param.m: (0.2.0)

	- Add Control Area and Length Distortions (CALD) by Li Shen.

	* Add matlab/test/test_surface_param.m: (0.1.0)
	* Add matlab/PointsToolbox/surface_param.m: (0.1.0)

	- This function extracts the parametrization part of
	surface_interpolation(), that is going to be deprecated. I have
	changed the way you pass arguments to sphisomap to make it
	comparable to isomap. Now all optimization is done in the full
	disjkstra distance matrix. I have also simplified the code,
	merging the part about default and the part with the actual
	parametrization.

	* matlab/ThirdPartyToolbox/dijkstra.m: (0.3.1)
	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.3.1)

	- Small clarification in the help header.

2013-06-15  Ramon Casero  <rcasero@gmail.com>

	* matlab/update_README.sh: (0.2.0)

	- Put the case loop outside, and then the loop for each file
	inside the particular cases. This allows us to use different find
	commands to list the files in each toolbox, suiting the different
	conventions of third party toolboxes.

	* matlab/add_gerardus_paths.m: (0.1.3)

	- Correct the paths to the Spharm toolbox.

	* matlab/add_gerardus_paths.m: (0.1.2)
